bonus-ai-app/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bonus-ai-app
  labels:
    name: bonus-ai-app
    app: bonus-ai-app
